[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/World.gd" type="Script" id=1]
[ext_resource path="res://images/wooden_cog.png" type="Texture" id=2]
[ext_resource path="res://scenes/Blocks.gd" type="Script" id=3]
[ext_resource path="res://scenes/BlockSelector.gd" type="Script" id=4]
[ext_resource path="res://logics/tileentities/tileentity.gd" type="Script" id=5]

[sub_resource type="TileSet" id=1]
0/name = "wooden_cog"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( -4, -4 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 40, 0, 40, 40 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="TileEntities" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="TileEntities"]
visible = false
texture = ExtResource( 2 )
offset = Vector2( 16, 16 )
script = ExtResource( 5 )

[node name="Blocks" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 3 )

[node name="BlockSelector" type="ScrollContainer" parent="."]
margin_left = 985.0
margin_top = 11.0
margin_right = 1017.0
margin_bottom = 595.0
scroll_horizontal_enabled = false
script = ExtResource( 4 )

[node name="Button" type="Button" parent="BlockSelector"]
visible = false
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
icon = ExtResource( 2 )
expand_icon = true

[node name="AutoTickLabel" type="RichTextLabel" parent="."]
margin_left = 26.0
margin_top = 20.0
margin_right = 113.0
margin_bottom = 60.0
text = "Manual Tick"

[node name="ManualTickCheckButton" type="CheckButton" parent="."]
margin_left = 28.0
margin_top = 31.0
margin_right = 104.0
margin_bottom = 71.0
pressed = true

[node name="TickDeltaLabel" type="RichTextLabel" parent="."]
margin_left = 19.0
margin_top = 85.0
margin_right = 117.0
margin_bottom = 125.0
text = "Tick delta (ms)"

[node name="TickDeltaInput" type="TextEdit" parent="."]
margin_left = 34.0
margin_top = 104.0
margin_right = 95.0
margin_bottom = 124.0
text = "200"

[node name="TickApplyButton" type="Button" parent="."]
margin_left = 29.0
margin_top = 136.0
margin_right = 98.0
margin_bottom = 156.0
text = "Apply"

[node name="NextTickButton" type="Button" parent="."]
margin_left = 29.0
margin_top = 182.0
margin_right = 98.0
margin_bottom = 202.0
text = "Next tick"

[node name="PlayingLabel" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 580.0
margin_right = 63.0
margin_bottom = 603.0
bbcode_enabled = true
bbcode_text = "[color=#00ff00][b]Playing[/b][/color]"
text = "Playing"

[node name="CurrentTickLabel" type="RichTextLabel" parent="."]
margin_left = 8.0
margin_top = 562.0
margin_right = 63.0
margin_bottom = 585.0
bbcode_enabled = true
bbcode_text = "[b]Tick 0[/b]"
text = "Tick 0"

[connection signal="tilemap_event" from="Blocks" to="." method="_on_tilemap_updated"]
[connection signal="toggled" from="ManualTickCheckButton" to="." method="_on_autotick_toggled"]
[connection signal="button_down" from="TickApplyButton" to="." method="_on_tick_apply"]
[connection signal="button_down" from="NextTickButton" to="." method="_on_next_tick_pressed"]
